----------
v6.1.0-git
----------

[mms] Remove 'compose_cc' and 'compose_bcc' preferences.
[mms] Support attaching vCard in dynamic compose.
[mms] Support attaching PGP public keys in dynamic compose.
[mms] Smartmobile view now uses additive loading instead of pagination on the
      mailbox page.
[mms] Converted 'link_all_attachments' configuration option to the
      'link_attach' preference.
[mms] Support link attachment feature in dynamic view.
[mms] Display Virtual Folders in smartmobile view.
[mms] Abstract all UIDs used for mailbox/message navigation on the browser to
      BUIDs (browser UIDs) (Bug #10719).
[mms] Use more efficient murmurhash3 to determine changes in compose message
      that will trigger auto saved drafts.
[mms] Initialize viewport and mailbox list in single AJAX call when initially
      loading the dynamic mailbox view.
[mms] Add message thread view to dynamic mailbox preview.
[mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
[mms] Collapse multiple mailbox export options in dynamic mailbox view to
      single action.
[mms] Importing a PGP personal key now only requires the private key.


------
v6.0.4
------

[mms] Fix deleting virtual folders/filters from preferences page (Bug #11982).
[mms] Fix saving mailbox expansion state in basic folders view (Bug #11979).
[mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
[jan] Fix JavaScript errors with Internet Explorer 8.
[mms] Fix display of mail log icons on the basic message page (Bug #11964).
[jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi,
      Bug #11959).
[mms] Workaround broken Message-IDs generated by Outlook when replying to a
      message (Bug #11953).
[mms] Fix display of attachment name in basic compose screen (Bug #11947).


------
v6.0.3
------

[mms] Re-add apply mail filters action in dynamic view.
[mms] Improved parsing of References header when replying to a message.