@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Dynamically display MIME type icon for attachments uploaded on the dynamic compose page.
 * [mms] Remove &apos;compose_cc&apos; and &apos;compose_bcc&apos; preferences.
 * [mms] Support attaching vCard in dynamic compose.
 * [mms] Support attaching PGP public keys in dynamic compose.
@@ -2942,6 +2943,7 @@
     <api>stable</api></stability>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Dynamically display MIME type icon for attachments uploaded on the dynamic compose page.
 * [mms] Remove &apos;compose_cc&apos; and &apos;compose_bcc&apos; preferences.
 * [mms] Support attaching vCard in dynamic compose.
 * [mms] Support attaching PGP public keys in dynamic compose.
